Adding connection handler classes that will respond to connect and disconnect server requests.
